Add questio mark

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </p>
               </li>
               <li>
-                <h3 class="sd-section--subheader">Can I attend Hack Day if I am not a UCSD student</h3>
+                <h3 class="sd-section--subheader">Can I attend Hack Day if I am not a UCSD student?</h3>
                 <p>
                   Winter Hack Day is open to <strong>UCSD students only</strong> but we hope you apply for SD Hacks 2017 in the fall! It will be open to all students.
                 </p>
