--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). Hear about our latest email updates here:
               </p>
               <p>
-                <form id="update_signup" action="//sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;amp;id=c99e3caa24" method="post" target="_blank" novalidate="novalidate" class="subscribe">
+                <form id="update_signup" action="https://sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;id=d90c0e8b05" method="post" target="_blank" novalidate="novalidate" class="subscribe">
                   <div style="position: absolute; left: -5000px;" aria-hidden="true">
                     <input type="text" name="b_2b76757d9b200f72632d7330a_c99e3caa24" tabindex="-1" value=""/>
                   </div>
