Added submit hack button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 Qualcomm Room, Jacobs Hall<br>
                 January 13-14, 2017
               </h2>
-              <a class="sd-button button success" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a>
+              <a class="sd-button button sd-button--unfixed" href="https://hackday2017.devpost.com" target="_blank">Submit Your Hack!</a>
+<!--               <a class="sd-button button success" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a> -->
             </div>
           </div>
         </div>
@@ -264,9 +265,9 @@
           <div class="sd-footer--hex"></div>
           <div class="sd-footer--background-helper"></div>
           <div class="sd-footer--links">
-            <ul class="sd-footer--list hide-for-large">
+            <!-- <ul class="sd-footer--list hide-for-large">
               <li><a class="sd-footer--textlink" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a></li>
-            </ul>
+            </ul> -->
             <ul class="sd-footer--list">
               <li><a target="_blank" href="https://www.facebook.com/SDHacks/"><i class="fa fa-facebook-square"></i></a></li>
               <li><a target="_blank" href="https://twitter.com/sdhacks"><i class="fa fa-twitter-square"></i></a></li>
