--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
                 Qualcomm Room, Jacobs Hall<br>
                 January 13-14, 2017
               </h2>
-              <a class="sd-button button sd-button--unfixed" href="https://hackday2017.devpost.com" target="_blank">Submit Your Hack!</a>
+              <form id="update_signup" action="https://sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;id=d90c0e8b05" method="post" target="_blank" novalidate="novalidate" class="subscribe">
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_2b76757d9b200f72632d7330a_c99e3caa24" tabindex="-1" value=""/>
+                </div>
+                <input id="updates-email" type="email" value="" name="EMAIL" placeholder="email@sdhacks.io" required="required" class="subscribe--email"/>
+                <input id="updates-subscribe" type="submit" name="subscribe" value="Get Updates!" class="subscribe--button"/>
+              </form>
+              <!-- <a class="sd-button button sd-button--unfixed" href="https://hackday2017.devpost.com" target="_blank">Submit Your Hack!</a> -->
 <!--               <a class="sd-button button success" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a> -->
             </div>
           </div>
@@ -99,13 +106,13 @@
                 So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). Hear about our latest email updates here:
               </p>
               <p>
-                <form id="update_signup" action="https://sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;id=d90c0e8b05" method="post" target="_blank" novalidate="novalidate" class="subscribe">
+<!--                 <form id="update_signup" action="https://sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;id=d90c0e8b05" method="post" target="_blank" novalidate="novalidate" class="subscribe">
                   <div style="position: absolute; left: -5000px;" aria-hidden="true">
                     <input type="text" name="b_2b76757d9b200f72632d7330a_c99e3caa24" tabindex="-1" value=""/>
                   </div>
                   <input id="updates-email" type="email" value="" name="EMAIL" placeholder="email@sdhacks.io" required="required" class="subscribe--email"/>
                   <input id="updates-subscribe" type="submit" name="subscribe" value="Get Updates!" class="subscribe--button"/>
-                </form>
+                </form> -->
               </p>
             </div>
           </div>
