--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="sd-hextion--content">
               <h2 class="sd-hextion--header">Keep up with us!</h2>
               <p>
-                So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). Hear about our latest email updates here:
+                So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). Look out for our upcoming Spring Hack Day!
               </p>
               <p>
 <!--                 <form id="update_signup" action="https://sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;id=d90c0e8b05" method="post" target="_blank" novalidate="novalidate" class="subscribe">
