--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               </form>
               <!-- <a class="sd-button button sd-button--unfixed" href="https://hackday2017.devpost.com" target="_blank">Submit Your Hack!</a> -->
 <!--               <a class="sd-button button success" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a> -->
+              <a class="sd-button button success" href="https://www.sdhacks.io">Main Site</a>
             </div>
           </div>
         </div>
